<resources>
    <string name="facebook_app_id">1423836377688211</string>

    <string name="fb_login_protocol_scheme">fb1423836377688211</string>

    <string name="app_name">AndroidOthello</string>
    <string name="desired_username">desired_username</string>
    <string name="enter_your_first_name">enter_your_first_name</string>
    <string name="enter_password">enter_password</string>
    <string name="re_enter_password">re_enter_password</string>
    <string name="enter_valid_email_id">enter_valid_email_id</string>
    <string name="enter_last_name">enter_last_name</string>
    <string name="register">register</string>
</resources>